--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <link rel="icon" href="./public/images/thumb.png">
     <link rel="stylesheet" href="./public/css/styles.css">
     <link rel="stylesheet" href="./public/css/homeMobile.css">
+    <link rel="stylesheet" href="./public/css/services.css">
 </head>
 
 <body class="">
     <nav id="navigation" class="">
-        <div class="homeLinks">
-            <img class="logo" src="./public/images/home.svg" alt="logo we robot">
+        <div id="home" class="homeLinks">
+            <a href="/">
+                <img class="logo" src="./public/images/home.svg" alt="logo we robot">
+            </a>
 
             <button class="openMenu" onclick="openMenu()"
             aria-expanded="false"
@@ -82,6 +85,24 @@
         </div>
     </main>
 
+    <div class="containerMobile">
+        <section id="services">
+            <header>
+                <h4>Services</h4>
+                <h2>How can we help your company using robotics</h2>
+
+                <div class="cards">
+                    <!--div para evitar repetição, conferir mobile.js
+                        cada um dos novos div criados levará a class="card"-->
+                    <div class="cards-container"></div>
+
+                </div>
+            </header>
+        </section>
+    </div>
+
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="./public/script/scroll.js"></script>
     <script src="./public/script/mobile.js"></script>
 </body>
 </html>
