debug: removendo bug da scrolllib

--- a/index.html
+++ b/index.html
@@ -91,18 +91,32 @@
                 <h4>Services</h4>
                 <h2>How can we help your company using robotics</h2>
 
+            </header>
+            
+            <div class="content">
                 <div class="cards">
                     <!--div para evitar repetição, conferir mobile.js
                         cada um dos novos div criados levará a class="card"-->
                     <div class="cards-container"></div>
 
                 </div>
-            </header>
+            </div>
         </section>
     </div>
 
-    <script src="https://unpkg.com/scrollreveal"></script>
-    <script src="./public/script/scroll.js"></script>
+    <div class="containerMobile">
+        <section id="about">
+            <header>
+                <h4></h4>
+                <h2></h2>
+            </header>
+
+            <div class="content">
+
+            </div>
+        </section>
+    </div>
+
     <script src="./public/script/mobile.js"></script>
 </body>
 </html>
