como ajeitar o menuexpanded

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
                 <h3 class="homeNumbers">+10</h2>
                 <p class="homeNumbersText">Operating years</p>
-            </div>
+            </div> 
         </div>
     </main>
 
@@ -119,6 +119,8 @@
         </section>
     </div>
 
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="./public/script/scroll.js"></script>
     <script src="./public/script/mobile.js"></script>
 </body>
 </html>
