--- a/index.html
+++ b/index.html
@@ -109,12 +109,15 @@
     <div class="containerMobile">
         <section id="about">
             <header>
-                <h4></h4>
-                <h2></h2>
+                <h4>About us</h4>
+                <h2>Understand our Company</h2>
             </header>
 
             <div class="content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum facilis cumque, ea ipsam asperiores nobis vero, odio recusandae iste autem, quasi animi laudantium. Omnis laudantium aperiam hic magnam qui nam?
+                </p>
 
+                <img src="./public/images/robotAbout.svg" alt="Robot and human hands reaching for each other">
             </div>
         </section>
     </div>
