debug: debugging menu Expanded

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="./public/css/styles.css">
     <link rel="stylesheet" href="./public/css/homeMobile.css">
     <link rel="stylesheet" href="./public/css/services.css">
+    <link rel="stylesheet" href="./public/css/about.css">
 </head>
 
 <body>
     <nav id="navigation">
-        <div id="home" class="homeLinks">
+        <div class="homeLinks">
             <a href="/">
                 <img class="logo" src="./public/images/home.svg" alt="logo we robot">
             </a>
@@ -31,7 +32,7 @@
 
             <div class="menu">
                 <ul class="listaLinks">
-                    <li><a onclick="closeMenu()" href="#home">Home</a></li>
+                    <li><a onclick="closeMenu()" href="/">Home</a></li>
                     <li><a onclick="closeMenu()" href="#services">Services</a></li>
                     <li><a onclick="closeMenu()" href="#about">About</a></li>
                 </ul>
@@ -92,7 +93,6 @@
             <header>
                 <h4>Services</h4>
                 <h2>How can we help your company using robotics</h2>
-
             </header>
             
             <div class="content">
