feat: iniciando estilização desktop

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <link rel="stylesheet" href="./public/css/services.css">
     <link rel="stylesheet" href="./public/css/about.css">
     <link rel="stylesheet" href="./public/css/contact.css">
+    <link rel="stylesheet" href="./public/css/responsividade.css">
 </head>
 
 <body>
     <nav id="navigation">
         <div class="homeLinks">
-            <a href="/">
+            <a class="anchorLogo" href="/">
                 <img class="logo" src="./public/images/home.svg" alt="logo we robot">
             </a>
 
