fix: add estilizações perdidas por conflitos de branch

--- a/index.html
+++ b/index.html
@@ -138,35 +138,40 @@
             </div>
 
             <div class="col-b">
-                <img src="./public/images/robotAbout.svg" alt="">
+                <img src="./public/images/robotAbout.svg" alt="robot and human hand reaching for each other">
             </div>
         </section>
     </div>
 
     <div class="containerMobile">
         <section id="contact">
-            <header>
-                <h2>Contact Us!</h2>
-            </header>
+            <div class="col-a">
+                <header>
+                    <h2>Contact Us!</h2>
+                </header>
 
-            <div class="content">
-                <ul>
-                    <li>
-                        <img src="./public/images/markerContact.svg">
-                        Av. Generique, 1313
-                    </li>
-                    <li>
-                        <img src="./public/images/mailContact.svg">
-                        contact@werobot.io
-                    </li>
-                </ul>
+                <div class="content">
+                    <ul>
+                        <li>
+                            <img src="./public/images/markerContact.svg">
+                            Av. Generique, 1313
+                        </li>
+                        <li>
+                            <img src="./public/images/mailContact.svg">
+                            contact@werobot.io
+                        </li>
+                    </ul>
 
-                <a class="button"
-                href="https://wa.me/5585987654321"
-                target="_blank"> <img src="./public/images/whatsapp.svg">
-                Schedule a meeting</a>
+                    <a class="button"
+                    href="https://wa.me/5585987654321"
+                    target="_blank"> <img src="./public/images/whatsapp.svg">
+                    Schedule a meeting</a>
 
-                <img src="./public/images/robotContact.png" alt="">
+                </div>
+            </div>
+            
+            <div class="col-b">
+                <img src="./public/images/robotContact.png" alt="robot answering a call on his notebook">
             </div>
         </section>
     </div>
@@ -175,7 +180,7 @@
         <footer>
             <div class="footerDiv">
 
-                <img src="./public/images/homeAlternativo.png" alt="our logo">
+                <img class="logoFooter" src="./public/images/homeAlternativo.png" alt="our logo">
                 
                 <p>
                     ©2023 We Robot <br>
