feat: adicionada funcionalidade de tracking de sections

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
             <div class="menu">
                 <ul class="listaLinks">
-                    <li><a onclick="closeMenu()" href="/">Home</a></li>
+                    <li><a onclick="closeMenu()" href="#home">Home</a></li>
                     <li><a onclick="closeMenu()" href="#services">Services</a></li>
                     <li><a onclick="closeMenu()" href="#about">About</a></li>
                 </ul>
