--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav id="navigation">
         <div class="homeLinks">
-            <a class="anchorLogo" href="/">
+            <a class="anchorLogo" href="https://andrelrocha.github.io/weRobot/">
                 <img class="logo" src="./public/images/home.svg" alt="logo we robot">
             </a>
 
@@ -205,7 +205,7 @@
         </footer>
     </div>
 
-    <a id="backToStart" class="" href="/">
+    <a id="backToStart" class="" href="https://andrelrocha.github.io/weRobot/">
         <img src="./public/images/backToStart.svg" alt="arrow for coming back to the begging of the page">
     </a>
 
